syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";

import "ubertool_trusted_backend/v1/ubertool_schema.proto";

option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "OrganizationServiceProto";

// Organization service
service OrganizationService {
  // List user's organizations
  rpc ListMyOrganizations(ListMyOrganizationsRequest) returns (ListOrganizationsResponse);

  // Get organization details
  rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse);

  // Create new organization
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);

  // Search organization
  // No access_token required
  rpc SearchOrganizations(SearchOrganizationsRequest) returns (ListOrganizationsResponse);

  // Join organization with invitation code (for existing users)
  rpc JoinOrganizationWithInvite(JoinOrganizationRequest) returns (JoinOrganizationResponse);

  // Update organization details
  rpc UpdateOrganization(UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
}

// List my organizations request
message ListMyOrganizationsRequest {
}

// List my organizations response
message ListOrganizationsResponse {
  repeated Organization organizations = 1;
}

// Get organization request
message GetOrganizationRequest {
  int32 organization_id = 1;

}

// Get organization response
message GetOrganizationResponse {
  Organization organization = 1;
}

// Create organization request
message CreateOrganizationRequest {
  string name = 1;
  string description = 2;
  string address = 3;
  string metro = 4;
  string admin_email = 5;
  string admin_phone = 6;
}

// Create organization response
message CreateOrganizationResponse {
  Organization organization = 1;
}

message SearchOrganizationsRequest {
  string name = 1;
  string metro = 2;
}

message UpdateOrganizationRequest {
  int32 organization_id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string metro = 5;
  string admin_email = 6;
  string admin_phone = 7;
}

message UpdateOrganizationResponse {
  Organization organization = 1;
}

// Join organization with invitation request
message JoinOrganizationRequest {
  string invitation_code = 1;
}

// Join organization with invitation response
message JoinOrganizationResponse {
  bool success = 1;
  Organization organization = 2;
  string message = 3;
}
